# splayer

./: .gitignore  .hg_archival.txt  .hgignore  .hgsub  .hgsubstate  ProjectHome.md  README.txt  SPlayerDev.md  splayer.sln
BuildScript/: build.cmd  post-build.cmd  pre-build.cmd  rev.cmd  revision.cmd  revision_dummy.h  shooterapi_dummy.key  sinet.vs2012.patch  sphash.vs2012.patch
BuildScript/MSBuild/: MSBuild.Community.Tasks.Targets
Prototype/AcousticFingerprintServer/: .AFServer.c.swp  AFServer.c  Makefile  POSID.cfg  README.txt  build.sh
Prototype/MediaCenterGui/: AboutDlg.h  MainFrm.h  MediaCenterGui.cpp  MediaCenterGui.h  MediaCenterGui.rc  MediaCenterGui.vcproj  MediaCenterGuiView.h  foundation.lib  resource.h  stdafx.cpp  stdafx.h
Setup/: Desctext.nsi  OCSetupHlp.nsh  Online Help.url  OpenCandy EULA.txt  OpenCandySample.nsi  OpenCandy_Why_Is_This_Here.txt  Setup360.nsi  SetupInternational.nsi  buildmsi.cmd  inc.OnInt.nsi  inc.Var.nsi  inc.uninstall.nsi  inc.uninstall.nsi@15  msinstaller.wxs  netSetup.nsi  nsdialog.nsi  nsisversion.conf  nsisversion.nsi  pin.vbs  pintask.nsh  script copy and paste.txt  strstr.nsh
Setup/csfcodec/: install.bat  install_test.bat  uninstall.bat
Setup/svplayer.msi/: readme.txt  setupmsi.proj
Test/: unittests.sln
Test/HotkeySchemeParser_UnitTest/: HotkeySchemeParser_UnitTest.vcproj  HotkeySchemeParser_UnitTest.vcxproj  stdafx.cpp  stdafx.h
Test/MD5TestConsole/: MD5TestConsole.cpp
Test/MediaTree_Test/: MediaTree_Test.vcproj  MediaTree_Test.vcxproj  MediaTree_Test.vcxproj.filters  main.cpp  stdafx.cpp  stdafx.h
Test/PlaylistParser_UnitTest/: PlaylistParser_UnitTest.cpp  PlaylistParser_UnitTest.vcproj  PlaylistParser_UnitTest.vcxproj  stdafx.cpp  stdafx.h
Test/RARChunk_unitest/: ChuckTest.cpp  ChuckTest.vcproj  ChuckTest.vcxproj  stdafx.cpp
Test/SnapUploadController_Test/: SnapUploadController_Test.cpp  SnapUploadController_Test.vcproj  stdafx.cpp  stdafx.h
Test/ThreadHelper_UnitTest/: ThreadHelper_UnitTest.cpp  ThreadHelper_UnitTest.vcproj  stdafx.cpp
Test/Update_Unittest/: run_all_unittests.cpp  updatenetlib_unittest.cpp
Test/pHash_Unittest/: testpHash.sln
Test/sqliteppTest/: TestMain.cpp  sqliteppTest.vcproj  stdafx.cpp  (+2 more)
Updater/: ReadMe.txt  Resource.h  Updater.cpp  Updater.rc  Updater.vcproj  Updater.vcxproj  Updater.vcxproj.filters  UpdaterDlg.cpp  conrgette_interface.h  cupdatenetlib.cpp  cupdatenetlib.h  stdafx.h
design/: logo_default.psd
include/: IBitRateInfo.h  IFilterVersion.h  Version.h  moreuuids.h  phashapi.h
lib/: libavcodec_gcc.lib  libpHash.lib  libsamplerate-0.lib  ssleay32.lib  zlibR.lib
lib/id3lib/zlib/include/: Makefile.am  Makefile.in  deflate.h  zutil.h
lib/id3lib/zlib/src/: Makefile.am  Makefile.in  compress.c  uncompr.c
splayer/branches/deleted/3.6-stable/lib/id3lib/zlib/: Makefile.am  configure.in
splayer/branches/deleted/3.6-stable/lib/id3lib/zlib/src/: adler32.c
src/: common.props  common.vsprops  debug.props  release.props
svplayer/: UpgradeLog.XML  VSFilter_vs2008.lnk  mpc_vs2005.sln  splayer.sln
svplayer-newmp4/: mpc.cmd  mpc_vs2005.sln
svplayer-newui/: mpc_vs2005.sln  regvobsub.cmd  splayer_newui.sln
tools/: build_thirdparty.pl  prepare_splayer.cmd  update_thirdparty.pl
wiki/: ===下载代码===.wiki  ===常见问题===.wiki  ===开始编译===.wiki  ==编译==.wiki  Challenges.wiki  Home.wiki  Splayer_home.md  TODO.wiki  下载代码.wiki  加入开发.wiki  射手影音 开发流程.md  射手影音 项目代码规范.md  射手影音HotKey编辑指南.wiki  射手影音_ToolBarButton设置指南.wiki  射手影音_兼容性问题列表.wiki  射手影音_字幕匹配常见问题.wiki  射手影音_开发原则.wiki  射手影音_开发流程.wiki  射手播放器_分支版本说明.wiki  射手播放器_常见问题.wiki  射手播放器_高清硬件解码的支持列表.wiki  射手播放器开发流程.wiki  工具栏按钮自定义指南.wiki  常见问题.wiki  开始编译.wiki  编译.wiki  项目模块简介.wiki
(+2739 files in other folders)
