# Copyright (C) 1999 Scott Thomas Haug <scott@id3.org>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

EXTRA_DIST = \
  deflate.h  \
  infblock.h \
  infcodes.h \
  inffast.h  \
  inffixed.h \
  inftrees.h \
  infutil.h  \
  trees.h    \
  zconf.h    \
  zlib.h     \
  zutil.h


