# $Id: configure.in,v 1.2 2001/12/17 17:20:42 shadrack Exp $

# Copyright 1999, 2000 Scott Thomas Haug <eldamitri@users.sourceforge.net>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

# require autoconf 2.13
AC_PREREQ(2.13)

# init autoconf (and check for presence of reconf)
AC_INIT(reconf)

VERSION=1.1.3
PACKAGE=zlib

AM_INIT_AUTOMAKE($PACKAGE,$VERSION)
AM_CONFIG_HEADER(config.h)

dnl Initialize libtool
AC_PROG_LIBTOOL

dnl Initialize maintainer mode
AM_MAINTAINER_MODE

#AC_CANONICAL_HOST

dnl Checks for programs
AC_PROG_CXX
AC_PROG_CXXCPP
AC_PROG_RANLIB
AC_PROG_INSTALL

dnl Checks for header files.
AC_HEADER_STDC
AC_HAVE_HEADERS(unistd.h errno.h)

dnl
dnl Checks with local macros
dnl

AC_OUTPUT(                      \
  Makefile                      \
  src/Makefile                  \
  prj/Makefile                  \
  include/Makefile              \
  lib/Makefile                  \
)
